started afresh (coding bootcamp)

--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  <meta name="keywords"
+    content="HTML, Coding, Coding Bootcamp, CSS, Frontend Mentor ,Challenge,Slider,Akosile, Tayo, Testimonials">
+
+  <!-- displays site properly based on user's device -->
+  <meta name="author" content="Akosile Oluwatayo">
+  <meta name="description"
+    content="Frontend Mentor | Coding Bootcamp Testimonials Slider created by Akosile Oluwatayo (Frontend Developer).">
+  <!-- Favicon -->
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon" />
   <!-- Fonts  -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-  
+  <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  <!-- Default Style -->
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
+<body>
+
+  <!-- Header/Bg-image Here -->
+  <header>
+    <div class="header">
+      <img src="images/image-john.jpg" width="225" height="225" alt="image-tanya">
+      <div class="header__buttons">
+        
+      </div>
+    </div>
+    <section>
+
+      <p>" If you want to lay the best foundation possible I'd recommend taking this course. The depth the instructors
+        go
+        into is incredible. I now feel so confident about starting up as a professional developer. "</p>
+      <p>John Tarkpor
+        <span>Junior Front-end Developer</span> </p>
+
+    </section>
+  </header>
+  <script src="script/main.js"></script>
+</body>
 
 </html>
