--- a/index.html
+++ b/index.html
@@ -25,22 +25,35 @@
 
   <!-- Header/Bg-image Here -->
   <header>
-    <div class="header">
-      <img src="images/image-john.jpg" width="225" height="225" alt="image-tanya">
+    <div class="header ">
+      <img src="images/image-2.jpg" width="240" height="240" alt="image-tanya">
       <div class="header__buttons">
-        
+
+        <div class="header__buttons-left btn" data-click="left">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 18">
+            <path fill="none" stroke="#8585AC" stroke-width="3" d="M11 1L3 9l8 8" /></svg>
+        </div>
+
+        <div class="header__buttons-right btn" data-click="right">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 18">
+            <path fill="none" stroke="#8585AC" stroke-width="3" d="M2 1l8 8-8 8" /></svg>
+        </div>
       </div>
     </div>
     <section>
-
-      <p>" If you want to lay the best foundation possible I'd recommend taking this course. The depth the instructors
-        go
-        into is incredible. I now feel so confident about starting up as a professional developer. "</p>
+      <p class="one">" If you want to lay the best foundation possible
+        I'd recommend taking this course. The depth the instructors go
+        into is incredible.
+        I now feel so confident about starting up as a professional developer. "</p>
       <p>John Tarkpor
         <span>Junior Front-end Developer</span> </p>
 
     </section>
-  </header>
+  </header> 
+
+  
+  <footer>
+  </footer>
   <script src="script/main.js"></script>
 </body>
 
